@@ -67,7 +67,7 @@
               <object class="GtkImage" id="image1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="icon-name">gtk-dialog-authentication</property>
+                <property name="icon-name">dialog-password-symbolic</property>
                 <property name="icon-size">6</property>
               </object>
               <packing>
