@@ -12,17 +12,17 @@
   <object class="GtkImage" id="image19">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="icon-name">go-down</property>
+    <property name="icon-name">go-down-symbolic</property>
   </object>
   <object class="GtkImage" id="image17">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="icon-name">gtk-close</property>
+    <property name="icon-name">window-close-symbolic</property>
   </object>
   <object class="GtkImage" id="image18">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="icon-name">go-up</property>
+    <property name="icon-name">go-up-symbolic</property>
   </object>
   <object class="GtkTreeStore" id="liststore1">
     <columns>
@@ -549,7 +549,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Save</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-save</property>
+                <property name="icon-name">document-save-symbolic</property>
                 <signal name="clicked" handler="on_save_clicked" swapped="no"/>
               </object>
               <packing>
@@ -577,7 +577,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Add</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-add</property>
+                <property name="icon-name">document-new-symbolic</property>
                 <signal name="clicked" handler="on_add_clicked" swapped="no"/>
               </object>
               <packing>
@@ -594,7 +594,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Add Folder</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">folder-new</property>
+                <property name="icon-name">folder-new-symbolic</property>
                 <signal name="clicked" handler="on_add_folder_clicked" swapped="no"/>
               </object>
               <packing>
@@ -611,7 +611,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Edit</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-edit</property>
+                <property name="icon-name">document-edit-symbolic</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -627,7 +627,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Remove</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-remove</property>
+                <property name="icon-name">edit-delete-symbolic</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -654,7 +654,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Open URL</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-index</property>
+                <property name="icon-name">go-home-symbolic</property>
                 <signal name="clicked" handler="on_open_url_clicked" swapped="no"/>
               </object>
               <packing>
@@ -671,7 +671,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Copy Username</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-orientation-portrait</property>
+                <property name="icon-name">system-users-symbolic</property>
                 <signal name="clicked" handler="on_copy_username_clicked" swapped="no"/>
               </object>
               <packing>
@@ -688,7 +688,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Copy Password</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-copy</property>
+                <property name="icon-name">star-new-symbolic</property>
                 <signal name="clicked" handler="on_copy_password_clicked" swapped="no"/>
               </object>
               <packing>
@@ -716,7 +716,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Find</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">edit-find</property>
+                <property name="icon-name">edit-find-symbolic</property>
                 <signal name="toggled" handler="on_toolbar_find_toggled" swapped="no"/>
               </object>
               <packing>
@@ -744,7 +744,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Display Secrets</property>
                 <property name="use_underline">True</property>
-                <property name="icon-name">gtk-dialog-authentication</property>
+                <property name="icon-name">view-more-horizontal-symbolic</property>
                 <signal name="toggled" handler="on_display_secrets_toggled" swapped="no"/>
               </object>
               <packing>
@@ -848,7 +848,7 @@
                         <property name="can_focus">True</property>
                         <property name="invisible_char">•</property>
                         <property name="invisible_char_set">True</property>
-                        <property name="primary_icon_name">edit-find</property>
+                        <property name="primary_icon_name">edit-find-symbolic</property>
                         <property name="primary_icon_activatable">False</property>
                         <property name="secondary_icon_activatable">False</property>
                         <signal name="activate" handler="on_find_entry_activate" swapped="no"/>
